fix: Continuous Integration and Publish.

--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,6 @@ dependencies {
     )
     //	ADempiere Core
     api "${baseGroupId}:base:${baseVersion}"
-    api "${baseGroupId}:project:${baseVersion}"
-    // https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-client
-	api 'org.glassfish.jersey.core:jersey-client:2.34'
-	// https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2
-	api 'org.glassfish.jersey.inject:jersey-hk2:2.34'
-	// https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api
-	api 'javax.ws.rs:javax.ws.rs-api:2.1.1'
-	// https://mvnrepository.com/artifact/org.json/json
-	api 'org.json:json:20211205'
 }
 
 sourceSets {
@@ -54,13 +45,16 @@ java {
 
 
 def entityType = 'D'
-def version = System.getenv("ADEMPIERE_LIBRARY_VERSION") ?: "local-1.0.0"
+group = "io.github.adempiere"
+version = System.getenv("ADEMPIERE_LIBRARY_VERSION") ?: "local-1.0.0"
 
 jar {
-    manifest {
-        attributes("Implementation-Title": "Adempiere Template Management",
-                   "Implementation-Version": version, 
-                   "EntityType": entityType)
+	manifest {
+		attributes(
+			"Implementation-Title": "ADempiere Business Processors",
+			"Implementation-Version": version,
+			"EntityType": entityType
+		)
     }
 }
 
@@ -78,9 +72,9 @@ publishing {
     }
     publications {
         mavenJava(MavenPublication) {
-        	groupId 'io.github.adempiere'
-            artifactId 'adempiere-business-processors'
-            version
+			groupId = group
+			artifactId = 'adempiere-business-processors'
+			version = version
            	from components.java
            	pom {
                 name = 'ADempiere Business Processors'
@@ -109,6 +103,12 @@ publishing {
 	}
 }
 
+
+task cleanBuildPublishLocal(type: GradleBuild) {
+	tasks = ['clean', 'build', 'publishToMavenLocal']
+}
+
+
 signing {
 	def isReleaseVersion = !version.toString().startsWith("local") && !version.toString().endsWith("-SNAPSHOT")
 
@@ -117,7 +117,7 @@ signing {
 	setRequired {
 		// signing is required if this is a release version and the artifacts are to be published
 		// do not use hasTask() as this require realization of the tasks that maybe are not necessary
-		isReleaseVersion && gradle.taskGraph.allTasks.any {
+		(isReleaseVersion || version.toString().equals("build")) && gradle.taskGraph.allTasks.any {
 			it.equals(PublishToMavenRepository)
 		}
 	}
