--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,24 @@ dependencies {
             '*.jar'
         ]
     )
+
+	// Jakarta RESTful Web Services
+	// https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api
+	implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
+
+	// Jersey core client implementation
+	// https://mvnrepository.com/artifact/  org.glassfish.jersey.core/jersey-client
+	api 'org.glassfish.jersey.core:jersey-client:2.34'
+	// https://mvnrepository.com/artifact/org.glassfish.jersey.inject/jersey-hk2
+	api 'org.glassfish.jersey.inject:jersey-hk2:2.34'
+
+	// JSON in Java
+	// https://mvnrepository.com/artifact/org.json/json
+	api 'org.json:json:20211205'
+
     //	ADempiere Core
     api "${baseGroupId}:base:${baseVersion}"
+	api "${baseGroupId}:project:${baseVersion}"
 }
 
 sourceSets {
